src/grammar/.antlr/TyCParser.py
# Generated from /home/thohnb/projects/252/252-ppl-tyc/src/grammar/TyC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'case'", "'continue'", 
                     "'default'", "'else'", "'float'", "'for'", "'if'", 
                     "'int'", "'return'", "'string'", "'struct'", "'switch'", 
                     "'void'", "'while'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", 
                     "'||'", "'!'", "'++'", "'--'", "'='", "'.'", "'['", 
                     "']'", "'{'", "'}'", "'('", "')'", "';'", "','", "':'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "CASE", "CONTINUE", 
                      "DEFAULT", "ELSE", "FLOAT", "FOR", "IF", "INT", "RETURN", 
                      "STRING", "STRUCT", "SWITCH", "VOID", "WHILE", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "EQUAL", "NOTEQUAL", "LESS_THAN", 
                      "LESS_EQUAL", "GREATER_THAN", "GREATER_EQUAL", "AND", 
                      "OR", "NOT", "INCREMENT", "DECREMENT", "ASSIGNMENT", 
                      "ACCESS", "LSB", "RSB", "LB", "RB", "LP", "RP", "SEMI", 
                      "COMMA", "COLON", "INTLIT", "FLOATLIT", "STRINGLIT", 
                      "IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_expr = 2
    RULE_assignExpr = 3
    RULE_logicalOrExpr = 4
    RULE_logicalAndExpr = 5
    RULE_equalityExpr = 6
    RULE_relationalExpr = 7
    RULE_additiveExpr = 8
    RULE_multiplicativeExpr = 9
    RULE_unaryExpr = 10
    RULE_postfixExpr = 11
    RULE_postfixPart = 12
    RULE_postfixOp = 13
    RULE_primaryExpr = 14
    RULE_structLiteral = 15
    RULE_argList = 16
    RULE_builtinType = 17
    RULE_type = 18
    RULE_varDecl = 19
    RULE_structMember = 20
    RULE_structDecl = 21
    RULE_stmt = 22
    RULE_blockstmt = 23
    RULE_ifstmt = 24
    RULE_whilestmt = 25
    RULE_breaksmt = 26
    RULE_continuestmt = 27
    RULE_returnstmt = 28
    RULE_forstmt = 29
    RULE_forInit = 30
    RULE_varDeclFor = 31
    RULE_switchstmt = 32
    RULE_caseBlock = 33
    RULE_defaultBlock = 34
    RULE_funcDecl = 35
    RULE_paramList = 36
    RULE_param = 37
    RULE_exprstmt = 38

    ruleNames =  [ "program", "decl", "expr", "assignExpr", "logicalOrExpr", 
                   "logicalAndExpr", "equalityExpr", "relationalExpr", "additiveExpr", 
                   "multiplicativeExpr", "unaryExpr", "postfixExpr", "postfixPart", 
                   "postfixOp", "primaryExpr", "structLiteral", "argList", 
                   "builtinType", "type", "varDecl", "structMember", "structDecl", 
                   "stmt", "blockstmt", "ifstmt", "whilestmt", "breaksmt", 
                   "continuestmt", "returnstmt", "forstmt", "forInit", "varDeclFor", 
                   "switchstmt", "caseBlock", "defaultBlock", "funcDecl", 
                   "paramList", "param", "exprstmt" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    CASE=3
    CONTINUE=4
    DEFAULT=5
    ELSE=6
    FLOAT=7
    FOR=8
    IF=9
    INT=10
    RETURN=11
    STRING=12
    STRUCT=13
    SWITCH=14
    VOID=15
    WHILE=16
    ADD=17
    SUB=18
    MUL=19
    DIV=20
    MOD=21
    EQUAL=22
    NOTEQUAL=23
    LESS_THAN=24
    LESS_EQUAL=25
    GREATER_THAN=26
    GREATER_EQUAL=27
    AND=28
    OR=29
    NOT=30
    INCREMENT=31
    DECREMENT=32
    ASSIGNMENT=33
    ACCESS=34
    LSB=35
    RSB=36
    LB=37
    RB=38
    LP=39
    RP=40
    SEMI=41
    COMMA=42
    COLON=43
    INTLIT=44
    FLOATLIT=45
    STRINGLIT=46
    IDENTIFIER=47
    WS=48
    LINE_COMMENT=49
    BLOCK_COMMENT=50
    UNCLOSE_STRING=51
    ILLEGAL_ESCAPE=52
    ERROR_CHAR=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TyCParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.DeclContext)
            else:
                return self.getTypedRuleContext(TyCParser.DeclContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_program




    def program(self):

        localctx = TyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 140737488401536) != 0):
                self.state = 78
                self.decl()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(TyCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structDecl(self):
            return self.getTypedRuleContext(TyCParser.StructDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(TyCParser.FuncDeclContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_decl




    def decl(self):

        localctx = TyCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.structDecl()
                pass
            elif token in [7, 10, 12, 15, 47]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.funcDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignExpr(self):
            return self.getTypedRuleContext(TyCParser.AssignExprContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_expr




    def expr(self):

        localctx = TyCParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.assignExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalOrExpr(self):
            return self.getTypedRuleContext(TyCParser.LogicalOrExprContext,0)


        def ASSIGNMENT(self):
            return self.getToken(TyCParser.ASSIGNMENT, 0)

        def assignExpr(self):
            return self.getTypedRuleContext(TyCParser.AssignExprContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_assignExpr




    def assignExpr(self):

        localctx = TyCParser.AssignExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.logicalOrExpr()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 93
                self.match(TyCParser.ASSIGNMENT)
                self.state = 94
                self.assignExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalAndExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.LogicalAndExprContext)
            else:
                return self.getTypedRuleContext(TyCParser.LogicalAndExprContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.OR)
            else:
                return self.getToken(TyCParser.OR, i)

        def getRuleIndex(self):
            return TyCParser.RULE_logicalOrExpr




    def logicalOrExpr(self):

        localctx = TyCParser.LogicalOrExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_logicalOrExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.logicalAndExpr()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 98
                self.match(TyCParser.OR)
                self.state = 99
                self.logicalAndExpr()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalAndExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equalityExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.EqualityExprContext)
            else:
                return self.getTypedRuleContext(TyCParser.EqualityExprContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.AND)
            else:
                return self.getToken(TyCParser.AND, i)

        def getRuleIndex(self):
            return TyCParser.RULE_logicalAndExpr




    def logicalAndExpr(self):

        localctx = TyCParser.LogicalAndExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_logicalAndExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.equalityExpr()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 106
                self.match(TyCParser.AND)
                self.state = 107
                self.equalityExpr()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualityExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relationalExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.RelationalExprContext)
            else:
                return self.getTypedRuleContext(TyCParser.RelationalExprContext,i)


        def EQUAL(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.EQUAL)
            else:
                return self.getToken(TyCParser.EQUAL, i)

        def NOTEQUAL(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.NOTEQUAL)
            else:
                return self.getToken(TyCParser.NOTEQUAL, i)

        def getRuleIndex(self):
            return TyCParser.RULE_equalityExpr




    def equalityExpr(self):

        localctx = TyCParser.EqualityExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_equalityExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.relationalExpr()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22 or _la==23:
                self.state = 114
                _la = self._input.LA(1)
                if not(_la==22 or _la==23):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 115
                self.relationalExpr()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationalExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additiveExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.AdditiveExprContext)
            else:
                return self.getTypedRuleContext(TyCParser.AdditiveExprContext,i)


        def LESS_THAN(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.LESS_THAN)
            else:
                return self.getToken(TyCParser.LESS_THAN, i)

        def LESS_EQUAL(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.LESS_EQUAL)
            else:
                return self.getToken(TyCParser.LESS_EQUAL, i)

        def GREATER_THAN(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.GREATER_THAN)
            else:
                return self.getToken(TyCParser.GREATER_THAN, i)

        def GREATER_EQUAL(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.GREATER_EQUAL)
            else:
                return self.getToken(TyCParser.GREATER_EQUAL, i)

        def getRuleIndex(self):
            return TyCParser.RULE_relationalExpr




    def relationalExpr(self):

        localctx = TyCParser.RelationalExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_relationalExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.additiveExpr()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 251658240) != 0):
                self.state = 122
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 251658240) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 123
                self.additiveExpr()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditiveExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicativeExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.MultiplicativeExprContext)
            else:
                return self.getTypedRuleContext(TyCParser.MultiplicativeExprContext,i)


        def ADD(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.ADD)
            else:
                return self.getToken(TyCParser.ADD, i)

        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.SUB)
            else:
                return self.getToken(TyCParser.SUB, i)

        def getRuleIndex(self):
            return TyCParser.RULE_additiveExpr




    def additiveExpr(self):

        localctx = TyCParser.AdditiveExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_additiveExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.multiplicativeExpr()
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==17 or _la==18:
                self.state = 130
                _la = self._input.LA(1)
                if not(_la==17 or _la==18):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 131
                self.multiplicativeExpr()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplicativeExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.UnaryExprContext)
            else:
                return self.getTypedRuleContext(TyCParser.UnaryExprContext,i)


        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.MUL)
            else:
                return self.getToken(TyCParser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.DIV)
            else:
                return self.getToken(TyCParser.DIV, i)

        def MOD(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.MOD)
            else:
                return self.getToken(TyCParser.MOD, i)

        def getRuleIndex(self):
            return TyCParser.RULE_multiplicativeExpr




    def multiplicativeExpr(self):

        localctx = TyCParser.MultiplicativeExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_multiplicativeExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.unaryExpr()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3670016) != 0):
                self.state = 138
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3670016) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 139
                self.unaryExpr()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryExpr(self):
            return self.getTypedRuleContext(TyCParser.UnaryExprContext,0)


        def NOT(self):
            return self.getToken(TyCParser.NOT, 0)

        def ADD(self):
            return self.getToken(TyCParser.ADD, 0)

        def SUB(self):
            return self.getToken(TyCParser.SUB, 0)

        def INCREMENT(self):
            return self.getToken(TyCParser.INCREMENT, 0)

        def DECREMENT(self):
            return self.getToken(TyCParser.DECREMENT, 0)

        def postfixExpr(self):
            return self.getTypedRuleContext(TyCParser.PostfixExprContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_unaryExpr




    def unaryExpr(self):

        localctx = TyCParser.UnaryExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_unaryExpr)
        self._la = 0 # Token type
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17, 18, 30, 31, 32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7516585984) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 146
                self.unaryExpr()
                pass
            elif token in [37, 39, 44, 45, 46, 47]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.postfixExpr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PostfixExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpr(self):
            return self.getTypedRuleContext(TyCParser.PrimaryExprContext,0)


        def postfixPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.PostfixPartContext)
            else:
                return self.getTypedRuleContext(TyCParser.PostfixPartContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_postfixExpr




    def postfixExpr(self):

        localctx = TyCParser.PostfixExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_postfixExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.primaryExpr()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 573378134016) != 0):
                self.state = 151
                self.postfixPart()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PostfixPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def postfixOp(self):
            return self.getTypedRuleContext(TyCParser.PostfixOpContext,0)


        def LP(self):
            return self.getToken(TyCParser.LP, 0)

        def RP(self):
            return self.getToken(TyCParser.RP, 0)

        def argList(self):
            return self.getTypedRuleContext(TyCParser.ArgListContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_postfixPart




    def postfixPart(self):

        localctx = TyCParser.PostfixPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_postfixPart)
        self._la = 0 # Token type
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31, 32, 34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.postfixOp()
                pass
            elif token in [39]:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.match(TyCParser.LP)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 264577502019584) != 0):
                    self.state = 159
                    self.argList()


                self.state = 162
                self.match(TyCParser.RP)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PostfixOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCREMENT(self):
            return self.getToken(TyCParser.INCREMENT, 0)

        def DECREMENT(self):
            return self.getToken(TyCParser.DECREMENT, 0)

        def ACCESS(self):
            return self.getToken(TyCParser.ACCESS, 0)

        def IDENTIFIER(self):
            return self.getToken(TyCParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_postfixOp




    def postfixOp(self):

        localctx = TyCParser.PostfixOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_postfixOp)
        try:
            self.state = 169
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.match(TyCParser.INCREMENT)
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.match(TyCParser.DECREMENT)
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 3)
                self.state = 167
                self.match(TyCParser.ACCESS)
                self.state = 168
                self.match(TyCParser.IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(TyCParser.IDENTIFIER, 0)

        def INTLIT(self):
            return self.getToken(TyCParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(TyCParser.FLOATLIT, 0)

        def STRINGLIT(self):
            return self.getToken(TyCParser.STRINGLIT, 0)

        def LP(self):
            return self.getToken(TyCParser.LP, 0)
